# serverless-data

./: Cargo.toml  README.md
vercel-mongodb-count/: .gitignore
vercel-mongodb-count/api/: Cargo.toml
vercel-mongodb-count/api/v1/: add.rs  count.rs
vercel-mongodb-count/lib/: api.rs  auth-example.toml  auth.rs  database.rs  lib.rs
