[package]
name = "vercel-mongodb-count"
version = "0.0.1"
authors = ["Borber <borber.drum@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "用以快速储存计数"
keywords = ["mongodb", "vercel"]
homepage = ""
repository = ""
readme = "README.md"


[dependencies]
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
http-serde = "1.0"
poem = "1.2"
tokio = "1.15.0"
lambda_runtime = "0.4"
mongodb = "2"
toml = "0.5"

[lib]
name = "local_lib"
path = "../lib/lib.rs"

[[bin]]
name = "add"
path = "v1/add.rs"

[[bin]]
name = "count"
path = "v1/count.rs"

